added blue bavkground

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Equity Balance Dashboard</title>
     <style>
+        body {
+            background-color: #32DBE1; /* Set your desired background color here */
+        }
         .dashboard-container {
             display: flex;
             justify-content: space-around;
